# decoding-v6

./: .gitignore  .prettierignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  eslint.config.js  package.json  playwright.config.ts  pnpm-lock.yaml  tsconfig.base.json  vitest.config.ts  wrangler.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: fixture.yml
.github/workflows/: ci.yml  desktop.yml  preview.yml
apps/cli/: package.json  tsup.config.ts
apps/desktop/: index.html  package.json  tsconfig.json  vite.config.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: main.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/edge/: README.md
apps/extension/: package.json  result.html  tsconfig.json  vite.config.ts
apps/web/: astro.config.mjs  package.json  tsconfig.json
docs/10-decisions/: ADR-003-zero-account-ad-supported-greenfield.md
docs/engineering/: dependencies.md
docs/implementation/: DEPLOYMENT.md  PR_PREVIEWS.md  SEARCH_CONSOLE.md  STATUS.md
docs/launch/: BETA_PROGRAM.md  COMMUNITY_POSTS.md  LAUNCH_CHECKLIST.md  SHOW_HN.md
docs/prd/: 01-product-core.md  02-growth.md  03-retention.md  04-monetization.md  05-uiux.md  06-architecture.md  07-harness-loop.md  08-platform-i18n.md  10-desktop.md  (+3 more)
scripts/: benchmark-engine.ts  check-bundle-budget.mjs  check-extension.ts  check-i18n.ts  check-network-allowlist.ts  check-prd-links.ts  check-sponsors.ts  check-tool-detector-parity.ts  validate-content.ts  verify-deploy.mjs
(+61 files in other folders)
