[package]
name = "decoding-desktop"
version = "6.0.0"
description = "Zero-account local developer workbench"
authors = ["decod.ing"]
license = "MIT"
repository = "https://github.com/whoo3474/decoding"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "decoding_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-autostart = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-dialog = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-opener = "2"
tauri-plugin-process = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-updater = "2"
